# Comm_Networks_workshop

./: CMakeLists.txt  Makefile  README.md  client.cpp  main.cpp  server.cpp  shared.h
Ex1/: main.cpp
Ex2/: Makefile  bw_template.c  client.cpp  ib_perf.c  ib_perf.cpp  infiniband.csv  server.cpp  shared.h  tasks.txt  tcp.csv
Ex3/: Makefile  README.txt  kv_template.c  main.cpp
Ex4/: ASK_GIL  Makefile  README  kv_client.c  kv_indexer.c  kv_server.c  kv_shared.c  kv_shared.h  nweb23.c
